<resources>
    <string name="app_name" translatable="false">JYN</string>
    <!-- MainActivity -->
    <string name="preference_resolution_title">Resolution</string>
    <string name="preference_resolution_summary">Select the resolution to record at</string>
    <string name="preference_fps_title">Frames per second</string>
    <string name="preference_fps_summary">Choose fps to record at</string>
    <string name="preference_bit_title">Bit rate</string>
    <string name="preference_bit_summary">Choose bit rate</string>
    <string name="preference_audio_record_title">Record audio</string>
    <string name="preference_audio_record_summary">Records audio from mic along with screen video</string>
    <string name="file_name_key" translatable="false">file_name</string>
    <string name="res_key" translatable="false">resolution</string>
    <string name="fps_key" translatable="false">fps</string>
    <string name="bitrate_key" translatable="false">bitrate</string>
    <string name="audio_rec_key" translatable="false">audiorec</string>
    <string name="storage_permission_request_title">Allow Storage Permission</string>
    <string name="storage_permission_request_summary">Write permission to storage is required to save the recorded video.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="screen_recording_permission_denied">Screen Recording Permission Denied</string>
    <string name="screen_recording_notification_title">Screen recording</string>
    <string name="screen_recording_notification_action_stop">Stop</string>
    <string name="fatal_exception_message">ScreenRecorder: Fatal Exception occurred. Log has been sent</string>
    <string name="snackbar_storage_permission_message">Grant storage perm</string>
    <string name="snackbar_storage_permission_action_enable">ENABLE</string>
    <string name="fab_record_hint">Start recording</string>
    <string name="recording_failed_toast">Screen recording failed.</string>
    <string name="screen_recording_already_active_toast">Screen recording session already active</string>
    <string name="large_resolution_selected_toast">The selected resolution is larger than display resolution. Using %1$s resolution instead</string>
    <string name="screen_recording_started_toast">Screen recording started</string>
    <string name="screen_recording_stopped_toast">Screen Recording stopped</string>
    <string name="fab_stop_hint">Stop recording</string>
    <string name="preference_floating_control_title">Use Floating Controls</string>
    <string name="preference_floating_control_summary">Enable/Disable floating controls which draws over every screen</string>
    <string name="preference_floating_control_key" translatable="false">floating_controls</string>
    <string name="tab_settings_title">Settings</string>
    <string name="prefs_category_video_settings_title">Video settings</string>
    <string name="prefs_category_audio_settings_title">Audio settings</string>
    <string name="prefs_category_recording_settings_title">Recording Settings</string>
    <string name="alert_permission_denied_title">Storage Permission Denied</string>
    <string name="alert_permission_denied_message">The app requires storage permission to save the recorded video and change default save directory.The app is rendered useless without the permission\n\nDo you want to grant it now?</string>
    <string name="preference_enable_target_app_title">Enable target app</string>
    <string name="preference_enable_target_app_summary">Open target app before recording</string>
    <string name="preference_enable_target_app_key" translatable="false">enable_app_target</string>
    <string name="preference_app_chooser_title">Choose App</string>
    <string name="preference_app_chooser_summary">Choose an app to start by default while recording</string>
    <string name="preference_app_chooser_key" translatable="false">app_chosen</string>
    <string name="orientation_key" translatable="false">orientation</string>
    <string name="preference_orientation_summary">Default orientation</string>
    <string name="preference_orientation_title">Orientation</string>
    <string name="toast_message_bitrate_high_warning">Bit rate too high! May not work for all</string>

    <!-- For About -->
    <string name="about_activity_label">About</string>
    <string name="menu_about_title">About</string>
    <string name="about_open_source">Open Source</string>
    <string name="open_source_info">This app is open sourced and the source could be obained at \n\nGithub url: %1$s\n\nLicense: %2$s</string>

</resources>
